--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
@@ -28,6 +29,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CustomerApp"
         tools:targetApi="31">
+        <activity
+            android:name=".Screens.ActivityDoneScreen"
+            android:exported="false" />
         <activity
             android:name=".Screens.SelectGarage"
             android:exported="false" />
