--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
     <queries>
         <intent>
@@ -29,6 +30,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CustomerApp"
         tools:targetApi="31">
+        <activity
+            android:name=".Screens.GarageView"
+            android:exported="false" />
         <activity
             android:name=".Screens.NearbyGarage"
             android:exported="false" />
